fix(growth): update pipeline stage payload to be an object instead of an array
