# src/modules/vp-access-business/vp-access-business.routes.ts
@@ -32,6 +32,7 @@ export const setupVpAccessBusinessRoutes = (authMid: MiddlewareHandler) => {
     routes.get('/growth/win-rate', (c) => growth.getWinRate(c))
     routes.get('/growth/activity', (c) => growth.getActivity(c))
     routes.get('/growth/pipeline-value', (c) => growth.getPipelineValue(c))
+    routes.get('/growth/pipeline-stage', (c) => growth.getPipelineStage(c))
     routes.get('/growth/cycle', (c) => growth.getCycle(c))
     routes.get('/growth/discount', (c) => growth.getDiscount(c))
 
